--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,53 @@
     padding: 0;
     margin: 0;
 }
+
+body { 
+	padding: 100px 0; 
+	background:#fae1dd; 
+	font-family:Arial; 
+	color:#333; 
+}
+
+#tabs {
+    width: 400px;
+    margin: auto;
+}
+
+#tabs > ul {
+    list-style-type: none;
+    display: flex;
+}
+
+#tabs > ul > li > a {
+    display: block;
+    height: 30px;
+    line-height: 30px;
+    margin-right: 2px;
+    background: #ffc2d1;
+    color: #ffe5ec;
+    text-decoration: none;
+    padding: 0 15px;
+    border-radius: 3px 3px 0 0;
+    }
+
+#tabs > div {
+    display: none;
+    padding: 15px;
+    background: #ffb3c6;
+    }
+
+#tabs > div:first-of-type {
+    display: block;
+    background: #ffb3c6;
+}
+
+#tabs > ul > li:first-of-type a {
+    color: #ffe5ec;
+    background: #ffb3c6;
+}
+
+p {
+    line-height: 1.5em;
+    margin-bottom: 1em;
+}
